# libtorch-gpu

./: CMakeLists.txt  CRAFT_test.cpp  README.md
